Update EditWord.java